--- a/c1.md
+++ b/c1.md
@@ -17,52 +17,41 @@
 - Future proof. If an application you are using stops working, you can still view it through the markdown-formatted text using a text editor application
 - Markdown is everywhere. Most websites, devices and applications support markdown.
 
-### Headings
-
-  Headings use the '#' Symbol. The are 6 different ones, with 1 being the largest and 6 being the smallest.
-  
-  H1 '# Heading'
-  
-  H2 '## Heading'
-  
-  H3 '### Heading'
-  
-  H4 '#### Heading'
-  
-  H5 '##### Heading'
-  
-  H6 '###### Heading'
-  
-
-### Italics and Bold
-
-  Both italics and bold use the asterik symbol. The only difference being, if you want to use italics you'd put one asterik before or phrase and one at the end, while bold will use two in the beginning and two at the end. You can also use an underscore symbol but it is best practice to use asteriks.
-  
-  
-  <em> *Italics* </em>
-  <strong> **Bold** </strong>
-   
-
-### Numbered Lists
-
-  1. text
-  2. text
-  3. text
+## Markdown Features
 
 
-### Unordered lists
+  ### Headings
 
-  * text
-  * text
-  * text
-  
+    Headings use the '#' Symbol. The are 6 different ones, with 1 being the largest and 6 being the smallest.
+    
+  ![Headings](https://sketchboard.io/img/note-heading-markdown.png)
+    
 
-*(Unordered lists can also use the '+' and '-' symbol)*
+  ### Italics and Bold
 
-### Links
+    Both italics and bold use the asterik symbol. The only difference being, if you want to use italics you'd put one asterik before or phrase and one at the end, while bold will use two in the beginning and two at the end. You can also use an underscore symbol but it is best practice to use asteriks.
 
-  Links use both brackets and parentheses. Within the brackets, you enter what ever you want the hyperlink text to say. The parentheses holds the URL of the website.
-  
-  <html>
-  <p>Text[Text](URL)</p>
-  </html>
+   ![Italics and Bold](https://user-images.githubusercontent.com/26315643/76597940-fc456380-6501-11ea-9239-fd973d08b4da.png)
+
+
+  ### Numbered Lists
+
+    1. text
+    2. text
+    3. text
+
+
+  ### Unordered lists
+
+    * text
+    * text
+    * text
+    
+
+  *(Unordered lists can also use the '+' and '-' symbol)*
+
+  ### Links
+
+    Links use both brackets and parentheses. Within the brackets, you enter what ever you want the hyperlink text to say. The parentheses holds the URL of the website.
+
+    
