--- a/c2.md
+++ b/c2.md
@@ -34,3 +34,62 @@
 - **IDE**: is a suite of different software
 - an IDE can be a text a file
 manager, a compiler, and a debugger all in one software package.
+
+## The Command Line
+### So what are they?
+
+- A **command line**, or terminal, is a text based interface to the system
+- You can type commands on a keyboard and you ill recieve feedback in similar to a text
+
+### Opening a Terminal
+
+- Fairly simple to access
+- Mac: Applications -> Utilites -> Terminal
+- Linux: can either be Applications -> System or Application -> Utilities depending on the distribution. (Sometimes you can right-click the desktop and you'll see an "Open Terminal" option)
+- Windows: Requires an SSH Client
+
+### The Shell, Bash
+
+- **Shell**: part of the operating system that defines how the terminal will behave and looks after running commands
+- Most common shell is **bash**.
+
+### Shortcuts
+
+- There are thousands of shortcuts to make coding easier
+
+## Basic Navigation
+
+### So where are we?
+
+- **pwd**: Print Working Directory. Tells you the current directory you are in.
+
+### What's in our Current Location?
+
+- **ls**: list contents of current directory 
+
+### Paths
+
+- Whenever we refer to a file or a directory, there are 2 paths **absolute** and **relative**
+- Relative path: A file or directory location relative to where we currently are in the file system
+- Absolute path: A file or directory location in relation to the root of the file system.
+- **Root**: very top of the hierarchical structure. Single slash ( / )
+- Absolute paths specify a location in relation to the root direcotry. Identified by a forward slash ( / )
+Relative paths specify location in relation to where you currently are in the system. *Will not begin with a slash*.
+
+### Let's Move Around a Bit
+
+- **cd**: Change Directory. Move to another directory
+- if you run the command cd without any arguments then it will always take you back to your home directory
+
+## More About Files
+
+### Everything is a File
+
+- Everything is a file under linux
+
+### Linux is an Extensionless System
+
+- a file extension is a set of 2 - 4 after a full stop at the end of a file
+- extensions also tell you what kind of file it is
+-**file**: obtain information about what type of file a file or directory is
+- **ls -a**: List the contents of a directory, including hidden files
