Answered question that i forgot to add

--- a/c2.md
+++ b/c2.md
@@ -93,3 +93,34 @@ Relative paths specify location in relation to where you currently are in the sy
 - extensions also tell you what kind of file it is
 -**file**: obtain information about what type of file a file or directory is
 - **ls -a**: List the contents of a directory, including hidden files
+
+## What are four important features to look for in a text editor?
+
+1. Code Completion
+2. Syntax Highlighting
+3. Variety of themes
+4. Healthy variety of extensions
+
+## What do the following commands do?
+
+pwd: Tells you the current directory you are in.
+
+ls: list contents of current directory
+
+cd: Move to another directory
+
+mkdir: creates directories
+
+touch: create, change and modify timestamps of a file
+
+## Can you explain what is happening in the following scenario if these commands and arguments are entered into the command line? (Arguments are extra instructions given to a command.)
+
+cd projects: changes current directory to projects if available
+
+mkdir new-project: creates new directory within current directory named new-project
+
+touch new-project/newfile.md: modifies time stamp for newfile.md in new-project directory
+
+cd ..: if you run the command cd without any arguments then it will always take you back to your home directory
+
+ls projects/new-project: list contents of new-project
