--- a/c3.md
+++ b/c3.md
@@ -50,3 +50,131 @@
 - **Staged**: Flagged a file’s changed version to be committed in the next snapshot
 
 ## Getting Started
+
+### Initial Customization
+
+#### Configuration Variables
+
+- **git config**: allows the setting of configuration variables that control aspects of Git's operation and look
+
+#### Identity Setting
+
+- Users should set up username and email that will be used by Git for every commit
+
+### Default Text Editor
+
+- without configuration of a text ediotr, Git will use system's default editor
+
+### Checking Settings
+
+- **git config --list**: to check settings
+
+### Getting Help
+
+- 3 ways of getting help
+    1. git help command
+    2. git command --help
+    3. man git-command
+
+## Setting up a Repository
+
+### Importing
+
+
+1. Switch to target directory
+2. Use the git init command
+3. To start tracking these repository files, perform an initial commit by typing the following:
+    - git add *.c
+    - git add LICENSE
+    - git commit -m "any msg here"
+
+### Cloning
+
+- **git clone (github link)**: command for cloning from connected repository
+- Copies all versions of a file for a project
+
+## Workflow
+
+### Local Repository Structure
+
+- Local git repository has 3 components
+  - Working Directory: actual files reside here
+  - Index: The area used for staging
+  - Head: Points to the most recent commit
+
+### Saving Changes
+
+- **Tracked**: tracked files can be modified, unmodified, or staged; part of the most recent file snapshot
+- **Untracked**: untracked files were not in the last snap shot and are not in the staging are
+
+### The Life Cycle of File Status
+
+1. After you edit a file, Git flags it as modified
+2. Stage the modified file
+3. Commit staged changes
+
+### Check File Status
+
+- **git status**: checks state of files
+
+### Tracking and Staging a New File
+
+#### Single File
+
+- **git add filename**: to track one file
+
+#### All Files
+
+- __git add *__: to track all files in a repository
+- After these command all files are tracked and staged for comitting
+
+### Committing a File
+
+- **git commit -m "text"**: command to commit one or multiple files with a special commit message
+
+### Committing All Changes
+
+- **git commit -a: commit all changes with no message
+
+### Pushing Changes
+
+- **git push origin main**: pushes changes from local master branch to remote named origin
+
+### Stashing Changes
+
+- **git stash**: when your not ready to commit changes but dont want to lose them
+
+-**git stash apply**: to finish commit when you are ready
+
+## Remote Repositories
+
+### Cloned Repositories
+
+- Git automatically gives the name “origin” to the server from which you cloned and the name “master” to the local branch
+
+### Seeing Your Remotes
+
+- **git remote**: can view short names of all specified remote handles
+- **git remot -v**: can view all the remote URLs next to their corresponding short names
+
+# Answer
+
+What is Version Control?
+
+- A system that allows you to see earlier version of a file or set of files by recording changes
+
+What is cloning in Git?
+
+- Creating a copy of an exisitng Git repository from a specific server using a cloning code
+
+What is the command to track and stage files?
+
+- git add *
+
+What is the command to take a snapshot of your changed files?
+
+- git commit 
+
+What is the command to send your changed files to Github?
+
+- git push origin main
