--- a/c4.md
+++ b/c4.md
@@ -28,4 +28,171 @@
 #### Things to Consider Before You Start Wireframing
 
 - The decision to use your hands or online tools is less decided by the UX Designer, but more from the approach towards the particular situation.
--
+- Depends largely on how much emphasis there is on visual design in a project
+- a number of ways different designers can structure the process from design to implementation:
+  - Wirefram > Interactive Prototype > Visual > Design
+  - Sketch > Code
+  - Sketch > Wireframe > Hi-Def Wireframe > Visual > Code
+  - Sketch > Wireframe > Visual Code
+
+#### The Best Tools for Wireframing
+
+- Tons of free wireframe tools
+  1. UXPin: One of the best with building responsive, clickable prototypes directly from a browser
+  2. Invision: allows you to get feedback from team and users through clickable mock-ups from your site
+  3. Wireframe.cc: provides you with tech to create wireframes from our browser quickly
+
+### 6 steps to make a Wireframe
+
+1. Do Research
+
+    Before designing, understand who your audience is and with competitor and industry research
+
+2. Prepare your research for Quick Reference
+
+    Make something you can refer to at anytime when you need it so you don't forget the important things
+
+3. Make sure you have your user flow mapped out
+
+    Important to have a clear cut concept of where the users will be coming from.
+
+4. Draft, don't draw. Sketch don't illistrate.
+
+    Outlining and representing features. No detail necessary. Think of these questions when sketching:
+      - How can you organize the content to support your users goal?
+      - What info is most important and where will your message go?
+      - What is the user expected to see on certain pages?
+      - What does the user need to do to complete the desired action?
+
+5. Add some detail and get testing
+
+    Once majority of the concept is done, start adding in details little by little
+
+6. Start tuning your wireframes into prototypes
+
+    Once you've acted upon all the feedback from the first prototype, you fan start transitioning into a more high quality prototype
+
+## How to Make Your Wireframe Good: Three Key Principles
+
+1. Clarity
+
+    Wireframe needs to explain to user why it exists, what the purpose of the website is for
+
+2. Confidence
+
+    Giving users the confidence to nagivate through the website with ease using common navigation placements. 
+    
+3. Simplicity is Key
+
+    Your wireframe is a visual guide to the framework of your website. No need for extra fluff or too much information. 
+
+## HTML Basics
+
+### So What is HTML
+
+- **Hyper Text Markup Language (HTML)**: is the code that is used to structure a website and its content
+- consits of series of elements you use to control how content looks a certain way
+
+### Anatomy of HTML
+
+1. The opening tag: consits of the name of the element wrapped in opening and closing brackets. Indicates where the element starts
+2. The Closing tag: similar to the opening tag, however it indicates where the element ends and also includes a forward slash right before the element name
+3. The content: the content of the element can consist of text, a link, a picture, all depending on the element
+4. The element: opening, closing and the content together comprise the element
+
+- attributes: contain extra information about the element that you don't want appearing in the actual content
+- attributes that set a value always have:
+  1. a space between it and the element name
+  2. attribute name followed by an equal sign
+  3. attribute value wrapped by opening and closing quotation marks
+
+### Nesting Elements
+
+- elements inside of other elements is called nesting
+- must make sure elements are properly nested
+
+### Void Elements
+
+- Elements with no content are considered **void elements**.
+
+### Anatomy of an HTML Document
+
+- **doctype**: a required preamble
+- **html**: element wraps all the content on the entire page
+- **head**: element acts as a container for all info you want to include on the HTML but ins't content you are showing to users
+- **viewport element**: ensures the page renders at the width of view point
+- **title**: sets the title of your page
+- **body**: contains all the content that you want to show your web users
+
+## Images
+
+- img consists of src, the source of the image and alt, descriptive text about the img
+
+## Marking up text
+
+### Headings
+
+- headings allow you to specify certain part of the website as being part of the heading
+
+### Paragraphs
+
+- paragraph elements is used to contain a paragraph of text 
+
+### Lists
+
+1. Ordered list
+2. Unordered list
+
+### Links
+
+- represented with a, being a short form for anchor
+- usually given href as an attribute
+- href= url
+
+## Semantics
+
+- in code semantics refers to the meaning of a piece of code
+
+### Semantics in JavaScript
+
+- In JavaScript, consider a function that takes a string parameter, and returns an ' li ' element with that string as its textContent
+
+### Semantics in CSS
+
+- consider styling a list with li elements represeting different types of fruit
+
+### Semantics in HTML
+
+- H1 is a semantic element
+- Gives the text it wraps around the role of "a top level heading" on a page
+- You can make other elements render as a top level heading but it has no semantic value
+- Important to use the correct elements at correct times
+- Benefits of writing semantic markup:
+  
+  - search engines consider its content as important key words
+  - screen readers can use it as a sign post
+  - significantly easier to use easier codes than scowering the lists for complicated ones
+  - suggest to the developer the type of data that will be populated
+  - semantic naming mirrors proper custom element/component nameing
+
+- "What element(s) best describe/represent the data that im going to populate?" 
+
+## Answer
+
+What is HTML and why do we use it?
+
+- HTML is a markup language that developers use to make websites look a certain way
+
+What are the 3 main parts of an HTML element?
+
+1. Opening Tag
+2. Closing Tag
+3. Content
+
+What is it called when you give an element extra information?
+
+- Attribute
+
+What is a semantic element?
+
+- A semantic element is an element that gives a role to the content it wraps around 
