--- a/c5.md
+++ b/c5.md
@@ -63,4 +63,4 @@ What are the three ways to insert CSS into your project?
 
 Write an example of a CSS rule that would give all elements red text.
 
-- The CSS rule that would give red text would be the color property. 
+- The CSS rule that would give red text would be the color property
